# devika-rs

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: config.rs  logger.rs  main.rs  socket_instance.rs  state.rs
src/llm/: groq_client.rs  llm.rs  mod.rs  ollama_client.rs
