[package]
name = "devika-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
lazy_static = "1.4.0"
llmclient = "0.2.1"
ollama-rs = "0.1.9"
once_cell = "1.19.0"
reqwest = "0.12.4"
rocket = { version = "0.5.1", features = ["json"] }
rocket_contrib = "0.4.11"
serde = "1.0.203"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["sqlite"] }
tiktoken = "1.0.1"
tokio = "1.37.0"
toml = "0.8.13"
url = "2.5.0"
zip = "2.1.1"
